template - Improving template by adding a test-case-builder tool.

--- a/random/template/test-case-builder/index.html
+++ b/random/template/test-case-builder/index.html
@@ -17,6 +17,6 @@
     <script src="index.js"></script>
   </head>
   <body>
-    <span id="input"></span>
+    <span id="content"></span>
   </body>
 </html>
